@@ -5,5 +5,3 @@ hashcash-sendmail is used to add hashcash support for MUAs that do not natively
 support hashcash.
 
 hashcash-request is used to pre-request hashcash tokens.
-
-For more information, see http://www.toehold.com/~kyle/hashcash/
